Playing with CSS

--- a/najcesca-pitanja.html
+++ b/najcesca-pitanja.html
@@ -67,6 +67,12 @@
       <div style="width:0%" class="div-block-15"></div>
     </div>
   </section>
+
+  <div class="call-to-action">
+    <div class="new-cta-button-container">
+      <a href="./index.html#contact-section" class="new-cta-button">Rezerviši termin&nbsp;<span>&rarr;</span></a>
+    </div>
+  </div>
   <section data-w-id="4a914704-659e-56c0-f782-11559fac036d" style="opacity:0" class="section-2">
     <div class="w-layout-blockcontainer container-2 w-container">
       <div class="accordian">
