--- a/osiguranje.html
+++ b/osiguranje.html
@@ -205,6 +205,12 @@
       <div style="width:0%" class="div-block-15"></div>
     </div>
   </section>
+
+  <div class="call-to-action">
+    <div class="new-cta-button-container">
+      <a href="./index.html#contact-section" class="new-cta-button">Rezerviši termin&nbsp;<span>&rarr;</span></a>
+    </div>
+  </div>
   <section class="content-section">
     <div id="w-node-_30fe74f1-e52a-5bee-c642-e2ab86377980-c1c256d4"
       class="w-layout-layout quick-stack-3 wf-layout-layout">
