--- a/tehnicki-pregled.html
+++ b/tehnicki-pregled.html
@@ -205,6 +205,11 @@
       <div style="width:0%" class="div-block-15"></div>
     </div>
   </section>
+  <div class="call-to-action">
+    <div class="new-cta-button-container">
+      <a href="./index.html#contact-section" class="new-cta-button">Rezerviši termin&nbsp;<span>&rarr;</span></a>
+    </div>
+  </div>
   <section class="content-section">
     <div id="w-node-cf21e075-d1d8-6d8e-7cce-e2533e0d497b-07e5ff17"
       class="w-layout-layout quick-stack-3 wf-layout-layout">
