--- a/ostalo.html
+++ b/ostalo.html
@@ -172,6 +172,11 @@
       <div style="width:0%" class="div-block-15"></div>
     </div>
   </section>
+  <div class="call-to-action">
+    <div class="new-cta-button-container">
+      <a href="./index.html#contact-section" class="new-cta-button">Rezerviši termin&nbsp;<span>&rarr;</span></a>
+    </div>
+  </div>
   <section class="content-section">
     <div id="placanje"
       class="w-layout-layout quick-stack-3 w-node-_379bd4f6-00a0-e9a0-f2a1-fe6a15bf01c9-aa386699 wf-layout-layout">
