--- a/tehnicki-pregled.html
+++ b/tehnicki-pregled.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>tehnicki-pregled</title>
+  <title>Tehnicki pregled | OGIMD</title>
   <meta content="tehnicki-pregled" property="og:title">
   <meta content="tehnicki-pregled" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -156,8 +156,8 @@
     type="text/javascript">WebFont.load({ google: { families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/transparent_logo.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/transparent_logo.png" rel="apple-touch-icon">
 </head>
 
 <body class="body">
@@ -170,9 +170,8 @@
               alt="Menu image"></a>
           <nav role="navigation" class="nav-menu-wrapper-2 w-nav-menu">
             <ul role="list" class="nav-menu-two w-list-unstyled">
-              <li data-w-id="6089e2b2-5161-6499-296c-caa3a6e7a47a" class="list-item-6">
-                <a href="./tehnicki-pregled.html" aria-current="page"
-                  class="nav-link-text other-page w--current">Tehnički</a>
+              <li class="list-item-3">
+                <a aria-disabled="true" style="color: #999;" class="nav-link-text other-page w--current">Tehnički</a>
               </li>
               <li data-w-id="6089e2b2-5161-6499-296c-caa3a6e7a47d" class="list-item-5">
                 <a href="./registracija.html" class="nav-link-text other-page">Registracija</a>
