--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="div-block">
       <div class="hero-section-container">
         <div data-w-id="796e269f-0dc6-7e37-db80-722997e2c518" class="text-container">
-          <h1 class="h1">Tehnički pregled OGI MD</h1>
+          <h1 style="line-height: 1.2;" class="h1">Tehnički pregled<br>OGI MD</h1>
           <p class="white-text">Tehnički pregled svih vrsta vozila - brzo, jednostavno i pouzdano! Posetite nas na bilo
             kojoj od naše dve lokacije. Pružamo profesionalnu uslugu uz pristupačne cene, sa dodatnim pogodnostima, sve
             na jednom mestu. Očekujemo vas!</p>
